--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ autogen-agentchat==0.4.4
 autogen-core==0.4.4
 autogen-ext[azure]
 azure-monitor-opentelemetry-exporter
-semantic-kernel
+semantic-kernel==1.26.1
 ipykernel
 azure-ai-projects
 pydantic
